[package]
name = "template-poem"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Omni <team@omni.dev>"]
description = "Poem API template"
license = "MIT"
repository = "https://github.com/omnidotdev/template-poem"
homepage = "https://template-poem.omni.dev"
keywords = []
categories = ["web-programming::http-server"]
readme = "README.md"

[[bin]]
name = "template-poem"
path = "src/main.rs"

[dependencies]
async-graphql = { version = "7.0.17", features = ["opentelemetry"] }
async-graphql-poem = "7.0.17"
opentelemetry = "0.27.0"
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }
poem = "3.1.11"
thiserror = "2"
tokio = { version = "1.46.1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy", "run-cargo-test"] }
